<?xml version="1.0"?>
<!--
 ~ SPDX-FileCopyrightText: Copyright DB Netz AG
 ~ SPDX-License-Identifier: CC0-1.0
 -->

<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dsd_common_types</name>
  <version>1.0.0</version>
  <description>Collection of commonly used geometry types for various applications</description>
  <maintainer email="noreply@deutschebahn.com">DB Netz AG</maintainer>
  <license>Apache 2.0, CC0-1.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>